# Advance-RAG

./: .env.example  .gitignore  demo.py  pyproject.toml
Session2/: .gitignore  README.md  demo.py  pyproject.toml
Session2/src/: config.py
Session2/src/chunking/: chunker.py
Session2/src/corpus/: extract_pdf.py
Session2/src/indexing/: indexer.py
Session2/src/retrieval/: retriever.py
Session2/src/self_rag/: grade_generation.py  graph.py  nodes.py  query_rewriter.py  state.py
scripts/: verify_chunks.py
src/compare/: compare.py
src/crag/: crag.py  grader.py  web_search.py
