[project]
name = "session2-contextual-crag"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "pymupdf>=1.24.0",
    "openai>=1.30.0",
    "qdrant-client>=1.9.0",
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-openai>=0.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "langgraph>=0.2.0",
    "ddgs>=9.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
